--- a/Views/servicios.html
+++ b/Views/servicios.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../Css/index.css">
 </head>
 <body>
@@ -78,7 +80,7 @@
                     <li class="menu__item">Cambio de aceite</li>
                 </ul>
             </div>
-            <div class="tarjetas--boxsize">
+            <div class="tarjetas--boxsize" data-aos="flip-left"data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                 <h2>Suspencion</h2>
                 <br/>
                 <br/>
@@ -92,7 +94,7 @@
                     <li class="menu__item">Cambio de aceite</li>
                 </ul>
            </div>
-           <div class="tarjetas--boxsize">
+           <div class="tarjetas--boxsize" data-aos="flip-left"data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                  <h2>Climatizacion</h2>
                  <br/>
                  <br/>
@@ -107,7 +109,7 @@
                      <li class="menu__item">Cambio de aceite</li>
                  </ul>
             </div>
-            <div class="tarjetas--boxsize">
+            <div class="tarjetas--boxsize" data-aos="flip-left"data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                 <h2>Frenos</h2>
                 <br/>
                 <br/>
@@ -160,5 +162,7 @@
          <br/>
          <h4 class="footer__copy">© 2022 Cor Competición, todos los derechos reservados.</h4>
      </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
 </body>
 </html>
