f37d059947112aeca443bbb9070236df827874bb

--- a/Views/nosotros.html
+++ b/Views/nosotros.html
@@ -11,20 +11,20 @@
     <header class="header">
         <nav>
             <picture>
-                <img src="../Imagenes/Logo Header.png"  alt="Logo" class="header__logo">
+                <img src="../Imagenes/Logo.svg"  alt="Logo" class="header__logo">
            </picture>
            <ul class="header__menu">
                 <li class="menu-header__item">
                     <a href="../index.html" class="menu-header__link">Inicio</a>
                 </li>
                 <li class="menu-header__item">
-                    <a href="../Views/servicios.html" class="menu-header__link">Nuestros servicios</a>
+                    <a href="../Views/servicios.html" class="menu-header__link">Servicios</a>
                 </li>
                 <li class="menu-header__item">
-                    <a href="../Views/ubicacion.html" class="menu-header__link">Donde encontrarnos</a>
+                    <a href="../Views/ubicacion.html" class="menu-header__link">Ubicacion</a>
                 </li>
                 <li class="menu-header__item">
-                    <a href="../Views/contacto.html" class="menu-header__link">Contactanos</a>
+                    <a href="../Views/contacto.html" class="menu-header__link">Contacto</a>
                 </li>
            </ul>
         </nav>
@@ -84,7 +84,7 @@
             </div>
          </ul>
          <picture>
-         <img src="../Imagenes/Logo Footer.png" alt="Imagen Logo" class="footer__logo">
+         <img src="../Imagenes/Logo footer.svg" alt="Imagen Logo" class="footer__logo">
         </picture>
        </section>
          <br/>
