--- a/Css/index.css
+++ b/Css/index.css
@@ -95,10 +95,15 @@ nav {
 
 #grilla_main{
     display: grid;
-    grid-template-columns: 50vw 50vw;
-    grid-template-rows: 80vh 1fr 1fr 100vh;
-    max-width: 1200px;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    max-width: 1300px;
+    margin: auto;
+    row-gap: 10px;
+    column-gap: 10px;
 }
+
+
 
 #lema {
     background-image: url(../Imagenes/Index\ img\ 1.png);
@@ -107,6 +112,8 @@ nav {
     background-position: center;
     background-color: #CAD2C5;
     grid-column: 1/3;
+    display: flex;
+    justify-content: center;
 }
 
 #introduccion {
@@ -155,7 +162,7 @@ nav {
     text-align: center;
     text-transform: uppercase;
     font-weight: 200;
-    align-items: center;
+    align-self: center;
 }
 
 .intro__imagen{
@@ -562,4 +569,8 @@ li .footer-menu__item {
     }
     100% {transform: rotate(360deg)
     }
+}
+.main, .article, .aside {
+    max-width: 1200px;
+    margin: 0 auto;
 }
