--- a/Views/servicios.html
+++ b/Views/servicios.html
@@ -13,17 +13,17 @@
     <header class="header">
         <nav>
             <picture>
-                <img src="../Imagenes/Logo Header.png"  alt="Logo" class="header__logo">
+                <img src="../Imagenes/Logo.svg"  alt="Logo" class="header__logo">
            </picture>
            <ul class="header__menu">
                 <li class="menu-header__item">
                     <a href="../index.html" class="menu-header__link">Inicio</a>
                 </li>
                 <li class="menu-header__item">
-                    <a href="../Views/nosotros.html" class="menu-header__link">Sobre nosotros</a>
+                    <a href="../Views/nosotros.html" class="menu-header__link">Nosotros</a>
                 </li>
                 <li class="menu-header__item">
-                    <a href="../Views/ubicacion.html" class="menu-header__link">Donde encontrarnos</a>
+                    <a href="../Views/ubicacion.html" class="menu-header__link">Ubicacion</a>
                 </li>
                 <li class="menu-header__item">
                     <a href="../Views/contacto.html" class="menu-header__link">Contactanos</a>
@@ -156,7 +156,7 @@
             </div>
          </ul>
          <picture>
-         <img src="../Imagenes/Logo Footer.png" alt="Imagen Logo" class="footer__logo">
+         <img src="../Imagenes/Logo footer.svg" alt="Imagen Logo" class="footer__logo">
         </picture>
        </section>
          <br/>
