--- a/Views/servicios.html
+++ b/Views/servicios.html
@@ -38,7 +38,7 @@
                  <h1>Servicios</h1>
                  <br/>
             </div>
-            <div class="tarjetas--boxsize">
+            <div class="tarjetas--boxsize" data-aos="flip-left"data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                  <h2>Electronica</h2>
                  <br/>
                  <br/>
@@ -52,7 +52,7 @@
                      <li class="menu__item">Cambio de aceite</li>
                  </ul>
             </div>
-            <div class="tarjetas--boxsize">
+            <div class="tarjetas--boxsize" data-aos="flip-left"data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                 <h2>Mecanica general</h2>
                 <br/>
                 <br/>
@@ -66,7 +66,7 @@
                     <li class="menu__item">Cambio de aceite</li>
                 </ul>
             </div>
-            <div class="tarjetas--boxsize">
+            <div class="tarjetas--boxsize" data-aos="flip-left"data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                 <h2>Encendido</h2>
                 <br/>
                 <br/>
@@ -127,37 +127,35 @@
     </section>
     <footer class="footer">
         <section class="footer__menuyimg">
-         <ul class="footer__menu">
             <div class="footer__menu--boxsize">
-             <li class="footer-menu__item">Nuestras redes:</li>
-               <ul>
-                 <li class="footer-menu__menu__item">Facebook</li>
-                 <li class="footer-menu__menu__item">Instagram</li>
-                 <li class="footer-menu__menu__item">Youtube</li>
-               </ul>
+                <h4 class="footer-menu__item">Horarios:</h4>
+                  <ul>
+                     <li class="footer-menu__menu__item">Lu-Ju 08-19 Hrs</li>
+                     <li class="footer-menu__menu__item">Vie 8-18 Hrs</li>
+                     <li class="footer-menu__menu__item">Sa-Dom Cerrado</li>
+                  </ul>
             </div>
             <div class="footer__menu--boxsize">
-             <li class="footer-menu__item">Nuestros horarios:</li>
-               <ul>
-                  <li class="footer-menu__menu__item">Lu-Jue 08:00 a 19:00 Hrs</li>
-                  <li class="footer-menu__menu__item">Vie 08:30 a 18:30 Hrs</li>
-                  <li class="footer-menu__menu__item">Sa-Dom Cerrado</li>
-               </ul>
+                <h4 class="footer-menu__item">
+                    <a href="../Views/ubicacion.html" class="footer-menu__item">Ubicacion</a>
+                </h4>
+            </div>
+            <picture>
+                <img src="../Imagenes/Logo footer.svg" alt="Imagen Logo" class="footer__logo">
+            </picture>
+            <div class="footer__menu--boxsize">
+             <h4>
+                <a href="../Views/contacto.html" class="footer-menu__item">Contacto</a>
+             </h4>
             </div>
             <div class="footer__menu--boxsize">
-             <li>
-                <a href="./Views/contacto.html" class="footer-menu__item">Contacto</a>
-             </li>
+                <h4 class="footer-menu__item">Redes:</li>
+                  <ul>
+                    <li class="footer-menu__menu__item">Facebook</li>
+                    <li class="footer-menu__menu__item">Instagram</li>
+                    <li class="footer-menu__menu__item">Youtube</li>
+                  </h4>
             </div>
-            <div class="footer__menu--boxsize">
-             <li class="footer-menu__item">
-                 <a href="./Views/ubicacion.html" class="footer-menu__item">Ubicacion</a>
-             </li>
-            </div>
-         </ul>
-         <picture>
-         <img src="../Imagenes/Logo footer.svg" alt="Imagen Logo" class="footer__logo">
-        </picture>
        </section>
          <br/>
          <h4 class="footer__copy">© 2022 Cor Competición, todos los derechos reservados.</h4>
