--- a/Css/index.css
+++ b/Css/index.css
@@ -18,6 +18,9 @@
     height: 125px;
 }
 
+.footer__logo{
+    margin-right: 40px;
+}
 
 
 img {
@@ -29,7 +32,8 @@ nav {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+
 }
 
 .menu-header__item {
@@ -59,39 +63,6 @@ nav {
     
 
 }
-
-@media screen and (max-width: 780px) {
-    nav {
-        flex-direction: column;
-    }
-    .menu-header__link {
-            color: white;
-            text-decoration: none;
-            font-family: Rye;
-            font-size: 18px;
-            margin: 10px;
-            display: flex;
-        }
-    .footer__menuyimg {
-            flex-direction: column;
-        }
-    
-}
-
-@media screen and (max-width: 380px) {
-    nav {
-        flex-direction: column;
-    }
-    .menu-header__link {
-            color: white;
-            text-decoration: none;
-            font-family: Rye;
-            font-size: 14px;
-            margin: 6px;
-            display: flex;
-        }
-}
-    
 
 #grilla_main{
     display: grid;
@@ -124,12 +95,14 @@ nav {
 #intro_imagen{
     grid-column: 2/3;
     grid-row: 2;
+    background-color: #CAD2C5;
 }
 
 #valores_imagen{
     grid-column: 1/2;
     grid-row: 3;
 }
+
 #nuestros-valores{
     grid-column: 2/3;
     grid-row: 3;
@@ -138,20 +111,7 @@ nav {
 #Marcas{
     grid-column: 1/3;
     grid-row: 4;
-}
-
-@media screen and (max-width: 800px) {
-    #grilla_main {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-@media screen and (max-width: 1000px) {
-    #Marcas {
-        display: none;
-    }
+    padding-bottom: 15px;
 }
 
 .lema__titulo {
@@ -283,9 +243,10 @@ nav {
 
 
 
-.intro {
+.intro, .valores {
     text-align: center;
-    margin: 30px;  
+    padding: 40px;
+    
 }
 
 
@@ -293,14 +254,6 @@ p {
     font-family: Lato;
     font-size: 20px;
     font-weight: 800;
-}
-
-.valores {
-    width: 500px;
-    height: 50px;
-    text-align: center;
-    margin: 30px; 
-    display: inline-block; 
 }
 
 
@@ -311,11 +264,12 @@ p {
 .footer__menuyimg{
     display: flex;
     justify-content: center;
+    max-width: 1300px;
+    margin: 0 auto;
+    justify-content: space-evenly;
 }
 
-.footer__menu {
-    display: inline-block;
-}
+
 .footer-menu__item {
     display: inline-block;
     font-family: Rye;
@@ -323,25 +277,14 @@ p {
     font-weight: 200;
     text-decoration: none;
     color: black;
+    text-align: center;
 
-}
-
-li .footer-menu__item {
-    display: inline-block;
-    font-family: Rye;
-    font-size: 24px;
-    font-weight: 200;
-    text-decoration: none;
-    color: black;
 }
 
 .footer__menu--boxsize {
-    width: 200px;
-    height: 100px;
-    display: inline-block;
     list-style: none;
-    margin: 15px;
 }
+
 .footer-menu__menu__item{
     font-family: Lato;
     font-size: 20px;
@@ -413,38 +356,6 @@ li .footer-menu__item {
 .tajetas--title{
     grid-column: 1/4;
 }
-
-@media screen and (max-width: 1024px) {
-    #grid_servicios {
-        display: grid;
-        grid-template-columns: repeat( 2 ,auto);
-        grid-template-rows: repeat(4 ,auto);
-    }
-    .tajetas--title{
-        grid-column: 1/3;
-    }
-}
-
-
-@media screen and (max-width: 628px) {
-    #grid_servicios {
-        display: grid;
-        grid-template-columns: repeat( 1 ,auto);
-        grid-template-rows: repeat(7 ,auto);
-    
-    }
-    .tajetas--title{
-        grid-column: 1/2;
-    }
-    .tarjetas__imagenes--size{
-        max-width: 100%;
-      
-    }
-}
-
-
-
-
 
 #Historia, #Ubicacion, #Formulario {
     background-color: #CAD2C5;
@@ -573,4 +484,98 @@ li .footer-menu__item {
 .main, .article, .aside {
     max-width: 1200px;
     margin: 0 auto;
+}
+
+@media screen and (max-width: 780px) {
+    nav {
+        flex-direction: column;
+    }
+    .menu-header__link {
+            color: white;
+            text-decoration: none;
+            font-family: Rye;
+            font-size: 18px;
+            margin: 10px;
+            display: flex;
+        }
+        .footer-menu__item {
+            display: inline-block;
+            font-family: Rye;
+            font-size: 16px;
+            font-weight: 200;
+            text-decoration: none;
+            color: black;
+            text-align: center;
+        
+        }
+        .footer-menu__menu__item{
+            font-family: Lato;
+            font-size: 13px;
+            font-weight: 800;
+            list-style: none;
+        }
+        .footer__copy{
+            font-size: 8px;
+        }
+    
+}
+
+@media screen and (max-width: 430px){
+    .footer__logo{display: none;}
+}
+
+@media screen and (max-width: 380px) {
+    nav {
+        flex-direction: column;
+    }
+    .menu-header__link {
+            color: white;
+            text-decoration: none;
+            font-family: Rye;
+            font-size: 14px;
+            margin: 6px;
+            display: flex;
+        }
+}
+
+@media screen and (max-width: 800px) {
+    #grilla_main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    #Marcas {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    #grid_servicios {
+        display: grid;
+        grid-template-columns: repeat( 2 ,auto);
+        grid-template-rows: repeat(4 ,auto);
+    }
+    .tajetas--title{
+        grid-column: 1/3;
+    }
+}
+
+
+@media screen and (max-width: 628px) {
+    #grid_servicios {
+        display: grid;
+        grid-template-columns: repeat( 1 ,auto);
+        grid-template-rows: repeat(7 ,auto);
+    
+    }
+    .tajetas--title{
+        grid-column: 1/2;
+    }
+    .tarjetas__imagenes--size{
+        max-width: 100%;
+      
+    }
 }
