Agregado de SASS

--- a/Views/servicios.html
+++ b/Views/servicios.html
@@ -89,7 +89,7 @@
             </div>
             <div class="tarjetas--boxsize" data-aos="flip-left"data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                 <h2>Frenos</h2>
-                <img src="../Imagenes/imagenes servicios/Frenos.png" alt="Frenos" class="tarjetas__imagenes--size">
+                <img src="../Imagenes/imagenes servicios/Frenos.png" alt="Frenos" class="tarjetas__imagenes--size">git
                 <ul>
                     <li class="menu__item">Electricidad</li>
                     <li class="menu__item">Baterias</li>
