--- a/Views/servicios.html
+++ b/Views/servicios.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../Css/translated.css">
     <link rel="stylesheet" href="../Css/index.css">
 </head>
 <body>
@@ -32,7 +33,8 @@
            </ul>
         </nav>
     </header>
-    <section id="Servicios">
+    <main class="Servicios"></main>
+      <section id="Servicios">
         <article id="grid_servicios">
             <div class="tajetas--title">
                  <h1>Servicios</h1>      
@@ -98,7 +100,8 @@
                 </ul>
            </div>
         </article>
-    </section>
+      </section>
+    </main>
     <footer class="footer">
         <section class="footer__menuyimg">
             <div class="footer__menu--boxsize">
