--- a/Views/nosotros.html
+++ b/Views/nosotros.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Cor Competicion es un taller mecanico de autos ubicado en el barrio de Boedo desde hace mas de 30 años siempre al servicio de nuestros fieles clientes que nos brindan su confianza">
+    <meta name="keywords" content="taller, taller mecanico, arreglar auto, familiar, capital, capital federal, boedo">
+    <title>Cor Competicion Nosotros</title>
     <link rel="stylesheet" href="../Css/index.css">
 </head>
 <body>
