--- a/Views/ubicacion.html
+++ b/Views/ubicacion.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Cor Competicion es un taller mecanico de autos ubicado en Las Casas 3893, barrio de Boedo, Capital Federal donde se realizan todo tipo de reparaciones al automovil">
+    <meta name="keywords" content="taller, ubicacion, cercano, taller mecanico, arreglar auto, capital, capital federal, boedo">
+    <title>Cor Competicion Ubicacion</title>
     <link rel="stylesheet" href="../Css/index.css">
 </head>
 <body>
