--- a/Views/contacto.html
+++ b/Views/contacto.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Cor Competicion es un taller mecanico de autos ubicado en el barrio de Boedo, contamos con diversos medios de contacto como atencion inmediata por telefono o envio de mail">
+    <meta name="keywords" content="taller, contacto, taller mecanico, whatsapp, contacto, mail, Telefono>
+    <title>Cor Competicion Contacto</title>
     <link rel="stylesheet" href="../Css/index.css">
 </head>
 <body>
