--- a/Css/index.css
+++ b/Css/index.css
@@ -362,45 +362,42 @@ p {
     background-color: #CAD2C5;
 }
 
-#Historia div{
-    width: 1340px;
-    height: 600px;
-    margin: 5px;
+.historia__grid {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(6, auto);
+    max-width: 1200px;
+    margin: 0 auto;
+    gap: 20px;
+    align-items: center;
 }
 
-#Historia img{
-    width: 600px;
-    height: 450px;
-    display: inline-block;
-    margin: 50px;
+.historia__grid h1 {
+    grid-column: 1/3;
 }
 
-#Historia p, #Equipo p{
-    display: inline-block;
-    width: 300px;
-    height: 350px;
-    margin: 100px;
-    color: black;
-    font-family: Lato;
-    font-size: 24px;
+.historia__grid h2 {
+    grid-column: 1/3;
+    grid-row: 4;
+}
+
+.historia__grid .img_equipo {
+    grid-column: 1/3;
+    grid-row: 5;
+    padding: 30px;
+    margin: 0 auto;
+    max-width: 550px; ;
+}
+
+
+
+.historia__grid .texto_equipo {
+    grid-column: 1/3;
+    grid-row: 6;
     text-align: center;
-    font-weight: 800;
-    margin: 150px;
 }
 
-#Equipo img{
-    width: 600px;
-    height: 700px;
-    display: inline-block;
-}
-
-#Equipo {
-    background-color: #84A98C;
-    width: 1340px;
-    height: 760px;
-}
-
-#Historia h1, #Equipo h2{
+#Historia h1, #Historia h2{
     color: black;
     font-family: Rye;
     font-size: 40px;
@@ -415,10 +412,11 @@ p {
     font-family: Rye;
     font-size: 40px;
     font-weight: 200;
-    text-decoration: none;
+    text-decoration: underline;
     color: black;
     text-align: center;
     padding: 15px;
+    text-transform: uppercase;
 }
 
 #Ubicacion h2{
@@ -430,9 +428,15 @@ p {
     font-weight: 800;
 }
 
+#Ubicacion{
+    margin: 0 auto;
+    max-width: 1200px;
+}
+
 #Ubicacion iframe{
-    margin: 0px 70px;
-    margin-bottom: 20px;
+    width: 1200px;
+    height: 500px;
+    border-radius: 2cm;
 }
 
 #Formulario h2{
@@ -443,6 +447,7 @@ p {
     margin-left: 15px;
     font-weight: 900;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 #Formulario .formulario{
@@ -450,7 +455,11 @@ p {
     font-family: Lato;
     font-size: 25px;
     font-weight: 600;
-    margin-left: 20px;
+    display: grid;
+    padding: 25px;
+    row-gap: 5px;
+    justify-content: space-around;
+
 }
 
 #Formulario .formulario__label{
@@ -584,5 +593,43 @@ grid-column: 1/3;
     .tarjetas__imagenes--size{
         max-width: 100%;
       
+    }
+}
+
+@media screen and (max-width: 628px) {
+    .historia__grid {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+  
+
+    }
+    .historia__grid .img_equipo #equipo{
+        
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    #Ubicacion iframe{
+        width: 800px;
+        height: 400px;
+        
+    }
+}
+
+@media screen and (max-width: 800px) {
+    #Ubicacion iframe{
+        width: 500px;
+        height: 300px;
+        
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #Ubicacion iframe{
+        width: 320px;
+        height: 160px;
+        
+        
     }
 }
