--- a/Views/contacto.html
+++ b/Views/contacto.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Cor Competicion es un taller mecanico de autos ubicado en el barrio de Boedo, contamos con diversos medios de contacto como atencion inmediata por telefono o envio de mail">
     <meta name="keywords" content="taller, contacto, taller mecanico, whatsapp, contacto, mail, Telefono">
     <title>Cor Competicion Contacto</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../Css/index.css">
 </head>
 <body>
@@ -42,57 +44,51 @@
               <input type="email" name="Email" class="formulario__input">
               <label for="Telefono" class="formulario__label">Tel:</label>
               <input type="tel" name="Telefono" class="formulario__input">
-              <br/>
-              <br/>
               <label for="vehiculo" class="formulario__label">Vehiculo:</label>
               <input type="text" name="vehiculo" class="formulario__input">
               <label for="Consulta" class="formulario__label">Consulta:</label>
               <textarea name="Consulta" id="" cols="30" rows="10" class="formulario__input"></textarea>
               <input type="submit" value="Enviar" class="formulario__botton">
-              <br/>
-              <br/>
-              <br/>
-              <br/>
-              <br/>
             </form>
         </article>
     </section>
     <footer class="footer">
         <section class="footer__menuyimg">
-         <ul class="footer__menu">
             <div class="footer__menu--boxsize">
-             <li class="footer-menu__item">Nuestras redes:</li>
-               <ul>
-                 <li class="footer-menu__menu__item">Facebook</li>
-                 <li class="footer-menu__menu__item">Instagram</li>
-                 <li class="footer-menu__menu__item">Youtube</li>
-               </ul>
+                <h4 class="footer-menu__item">Horarios:</h4>
+                  <ul>
+                     <li class="footer-menu__menu__item">Lu-Ju 08-19 Hrs</li>
+                     <li class="footer-menu__menu__item">Vie 8-18 Hrs</li>
+                     <li class="footer-menu__menu__item">Sa-Dom Cerrado</li>
+                  </ul>
             </div>
             <div class="footer__menu--boxsize">
-             <li class="footer-menu__item">Nuestros horarios:</li>
-               <ul>
-                  <li class="footer-menu__menu__item">Lu-Jue 08:00 a 19:00 Hrs</li>
-                  <li class="footer-menu__menu__item">Vie 08:30 a 18:30 Hrs</li>
-                  <li class="footer-menu__menu__item">Sa-Dom Cerrado</li>
-               </ul>
+                <h4 class="footer-menu__item">
+                    <a href="../Views/ubicacion.html" class="footer-menu__item">Ubicacion</a>
+                </h4>
+            </div>
+            <picture>
+                <img src="../Imagenes/Logo footer.svg" alt="Imagen Logo" class="footer__logo">
+            </picture>
+            <div class="footer__menu--boxsize">
+             <h4>
+                <a href="../Views/contacto.html" class="footer-menu__item">Contacto</a>
+             </h4>
             </div>
             <div class="footer__menu--boxsize">
-             <li>
-                <a href="./Views/contacto.html" class="footer-menu__item">Contacto</a>
-             </li>
+                <h4 class="footer-menu__item">Redes:</li>
+                  <ul>
+                    <li class="footer-menu__menu__item">Facebook</li>
+                    <li class="footer-menu__menu__item">Instagram</li>
+                    <li class="footer-menu__menu__item">Youtube</li>
+                  </h4>
             </div>
-            <div class="footer__menu--boxsize">
-             <li class="footer-menu__item">
-                 <a href="./Views/ubicacion.html" class="footer-menu__item">Ubicacion</a>
-             </li>
-            </div>
-         </ul>
-         <picture>
-         <img src="../Imagenes/Logo footer.svg" alt="Imagen Logo" class="footer__logo">
-        </picture>
        </section>
          <br/>
          <h4 class="footer__copy">© 2022 Cor Competición, todos los derechos reservados.</h4>
      </footer>
+     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
