--- a/Views/ubicacion.html
+++ b/Views/ubicacion.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Cor Competicion es un taller mecanico de autos ubicado en Las Casas 3893, barrio de Boedo, Capital Federal donde se realizan todo tipo de reparaciones al automovil">
     <meta name="keywords" content="taller, ubicacion, cercano, taller mecanico, arreglar auto, capital, capital federal, boedo">
     <title>Cor Competicion Ubicacion</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../Css/index.css">
 </head>
 <body>
@@ -36,46 +38,47 @@
             <article>
                 <h1 class="titulo">Ubicacion</h1>
                 <h2 class="semi-titulo">Nuestra direccion es LAS CASAS 3891, CABA</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6565.44364112319!2d-58.4232531783589!3d-34.63646945621282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd4a84f8038ced662!2sCor%20Competici%C3%B3n!5e0!3m2!1ses!2sar!4v1653590177584!5m2!1ses!2sar" width="1200" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6565.44364112319!2d-58.4232531783589!3d-34.63646945621282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd4a84f8038ced662!2sCor%20Competici%C3%B3n!5e0!3m2!1ses!2sar!4v1653590177584!5m2!1ses!2sar"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </article>
         </section>
     </main>
     <footer class="footer">
         <section class="footer__menuyimg">
-         <ul class="footer__menu">
             <div class="footer__menu--boxsize">
-             <li class="footer-menu__item">Nuestras redes:</li>
-               <ul>
-                 <li class="footer-menu__menu__item">Facebook</li>
-                 <li class="footer-menu__menu__item">Instagram</li>
-                 <li class="footer-menu__menu__item">Youtube</li>
-               </ul>
+                <h4 class="footer-menu__item">Horarios:</h4>
+                  <ul>
+                     <li class="footer-menu__menu__item">Lu-Ju 08-19 Hrs</li>
+                     <li class="footer-menu__menu__item">Vie 8-18 Hrs</li>
+                     <li class="footer-menu__menu__item">Sa-Dom Cerrado</li>
+                  </ul>
             </div>
             <div class="footer__menu--boxsize">
-             <li class="footer-menu__item">Nuestros horarios:</li>
-               <ul>
-                  <li class="footer-menu__menu__item">Lu-Jue 08:00 a 19:00 Hrs</li>
-                  <li class="footer-menu__menu__item">Vie 08:30 a 18:30 Hrs</li>
-                  <li class="footer-menu__menu__item">Sa-Dom Cerrado</li>
-               </ul>
+                <h4 class="footer-menu__item">
+                    <a href="../Views/ubicacion.html" class="footer-menu__item">Ubicacion</a>
+                </h4>
+            </div>
+            <picture>
+                <img src="../Imagenes/Logo footer.svg" alt="Imagen Logo" class="footer__logo">
+            </picture>
+            <div class="footer__menu--boxsize">
+             <h4>
+                <a href="../Views/contacto.html" class="footer-menu__item">Contacto</a>
+             </h4>
             </div>
             <div class="footer__menu--boxsize">
-             <li>
-                <a href="./Views/contacto.html" class="footer-menu__item">Contacto</a>
-             </li>
+                <h4 class="footer-menu__item">Redes:</li>
+                  <ul>
+                    <li class="footer-menu__menu__item">Facebook</li>
+                    <li class="footer-menu__menu__item">Instagram</li>
+                    <li class="footer-menu__menu__item">Youtube</li>
+                  </h4>
             </div>
-            <div class="footer__menu--boxsize">
-             <li class="footer-menu__item">
-                 <a href="./Views/ubicacion.html" class="footer-menu__item">Ubicacion</a>
-             </li>
-            </div>
-         </ul>
-         <picture>
-         <img src="../Imagenes/Logo footer.svg" alt="Imagen Logo" class="footer__logo">
-        </picture>
        </section>
          <br/>
          <h4 class="footer__copy">© 2022 Cor Competición, todos los derechos reservados.</h4>
      </footer>
+     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
