--- a/Views/nosotros.html
+++ b/Views/nosotros.html
@@ -48,7 +48,7 @@
                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis unde rerum, fugiat qui, architecto quasi consectetur perferendis delectus placeat, quae modi laboriosam expedita iure quidem reiciendis! Dolor nobis perferendis cupiditate.</p>
                 </div> 
                 <aside>   
-                     <img src="../Imagenes/Imagenes nuestra historia/Taller2.jpg" id="taller escritorio">
+                     <img src="../Imagenes/Imagenes nuestra historia/Taller2.jpg" id="taller-escritorio">
                 </aside>  
                 <h2>El Equipo</h2>
                 <aside class="img_equipo">
